updated RMDs for template report

--- a/data-raw/inst/Markdown/Report_TS_Mdls.Rmd
+++ b/data-raw/inst/Markdown/Report_TS_Mdls.Rmd
@@ -76,17 +76,14 @@ params_ls <- params
 ```{r echo=FALSE}
 predr_vars_nms_ls <- make_predr_vars_nms_ls(main_predrs_chr = params_ls$outp_smry_ls$predr_cmprsn_tb$predr_chr, 
                        covars_ls = list(params_ls$outp_smry_ls$prefd_covars_chr),
-                       existing_predrs_ls = params_ls$existing_predrs_ls 
-                       )
-
+                       existing_predrs_ls = params_ls$existing_predrs_ls)
 knit_pars_ls <- make_knit_pars_ls(rltv_path_to_data_dir_1L_chr = params_ls$rltv_path_to_data_dir_1L_chr,
                   mdl_types_chr = params_ls$outp_smry_ls$prefd_mdl_types_chr,
                   predr_vars_nms_ls = predr_vars_nms_ls,
-                  mdl_types_lup = TTU::get_cndts_for_mxd_mdls(), 
+                  mdl_types_lup = params_ls$outp_smry_ls$mdl_types_lup, 
                   plt_types_lup = TTU::plt_types_lup,
                   output_type_1L_chr = params_ls$output_type_1L_chr,
-                  section_type_1L_chr = params_ls$section_type_1L_chr
-                  ) 
+                  section_type_1L_chr = params_ls$section_type_1L_chr) 
 ```
 ```{r, echo=FALSE, results='asis'}
  knit_pars_ls %>%
