--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -27,7 +27,10 @@ As this is an illustrative example, we first must create a fake dataset (if usin
 ```{r message=FALSE}
 ds_tb <- readRDS(url("https://dataverse.harvard.edu/api/access/datafile/4750597")) 
 ```
-```{r inputds, eval = knitr::is_html_output(), results='asis'}
+
+The first few records of the dataset are as follows.
+
+```{r inputds, echo=F, eval = knitr::is_html_output(), results='asis'}
 ds_tb %>%
     head() %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
@@ -35,7 +38,7 @@ ds_tb %>%
                           mkdn_tbl_ref_1L_chr = "tab:inputds")
 ```
 
-We note our use of synthetic data by creating an object `use_fake_data_1L_lgl` and setting it to `TRUE`. For real world application - set this variable to `FALSE`.
+We can note our use of synthetic data by creating an object `use_fake_data_1L_lgl` and setting it to `TRUE`. For real world application - you can skip this step and remove all subsequent references to this variable.
 
 ```{r }
 use_fake_data_1L_lgl <-  TRUE
@@ -47,7 +50,10 @@ A data dictionary must also be supplied for the dataset. The dictionary must be 
 ```{r}
 dictionary_tb <- TTU::make_eq5d_ds_dict(ds_tb) 
 ```
-```{r dictionary, eval = knitr::is_html_output(), results='asis'}
+
+The data dictionary is reproduced below.
+
+```{r dictionary, echo=F, eval = knitr::is_html_output(), results='asis'}
 dictionary_tb %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Data dictionary",
@@ -71,7 +77,7 @@ ds_descvs_ls <- TTU::make_ds_descvs_ls(candidate_predrs_chr = c("k10_int","psych
 ```
 
 ### Candidate predictors metadata
-We create a lookup table with metadata on the dataset variables that we will be exploring as candidate predictors.
+We create a lookup table with metadata on the dataset variables that we specified in the `candidate_predrs_chr` element of `ds_descvs_ls` as our candidate predictors.
 
 ```{r}
 predictors_lup <- TTU::TTU_predictors_lup(TTU::make_pt_TTU_predictors_lup(short_name_chr = ds_descvs_ls$candidate_predrs_chr,
@@ -89,7 +95,7 @@ predictors_lup <- TTU::TTU_predictors_lup(TTU::make_pt_TTU_predictors_lup(short_
 ## Analysis parameters
 
 ### Multi-Attribute Utility Instrument (MAUI) parameters
-We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived. If our source dataset does not include a pre-calculated weighted utility variable, we must supply a function to calculate this variable using the `maui_scoring_fn` argument. Note if specifying such a function, it must:
+We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived. The minimum allowable health utility weight for this instrument can be declared using the `utl_min_val_1L_dbl` argument. If our source dataset does not include a pre-calculated weighted utility variable, we must supply a function to calculate this variable using the `maui_scoring_fn` argument. Note if specifying such a function, it must:
  - include identical arguments as in the below example (including names and order), even if all arguments are not required; and
  - also calculate an unweighted score that is a simple sum of all maui item question responses (e.g. the last three lines of the example `maui_scoring_fn`).
 
@@ -114,23 +120,10 @@ maui_params_ls <- TTU::make_maui_params_ls(maui_itm_short_nms_chr = c("Mobility"
 ```
 
 ## Candidate model types
-We next create a lookup table of the candidate model types we wish to explore. A template look-up table is available as part of the `TTU` package, but this may need need to be adapted for optimal use with your input data.
+We combine a lookup table of our candidate model types with parameters specific to the analyses to be run to compare the performance of each model.
 
 ```{r}
-mdl_types_lup <- TTU::get_cndts_for_mxd_mdls() 
-```
-
-```{r mdltypeslup, eval = knitr::is_html_output(), results='asis'}
-mdl_types_lup %>%
-  ready4show::print_table(output_type_1L_chr = "HTML",
-                          caption_1L_chr = "Candidate model types lookup table",
-                          mkdn_tbl_ref_1L_chr = "tab:mdltypeslup")
-```
-
-We combine our candidate model types lookup table with parameters specific to the analyses to be run to compare the performance of each model.
-
-```{r}
-mdl_smry_ls <- TTU::make_mdl_smry_ls(mdl_types_lup = mdl_types_lup,
+mdl_smry_ls <- TTU::make_mdl_smry_ls(mdl_types_lup = TTU::get_cndts_for_mxd_mdls(),
                                      folds_1L_int = 10L,
                                      max_nbr_of_boruta_mdl_runs_int = 300L)
 ```
@@ -150,12 +143,10 @@ analysis_core_params_ls <- TTU::make_analysis_core_params_ls(ds_descvs_ls = ds_d
 We next create an object that specifies the relative locations of the input data and the intended destination for analysis outputs and reports. The default settings of the `make_path_params_ls` function will write all output into a new directory, created one level up from the current working directory.
 
 ```{r}
-path_params_ls <- TTU::make_path_params_ls("fake_data.rds")
+path_params_ls <- TTU::make_path_params_ls(use_fake_data_1L_lgl = use_fake_data_1L_lgl,
+                                      write_new_dir_1L_lgl = T)
 ```
-```{r echo = TRUE }
-path_params_ls$paths_ls <- TTU::write_main_oupt_dir(path_params_ls, 
-                                     use_fake_data_1L_lgl = use_fake_data_1L_lgl)
-```
+
 ## Output repositories
 We provide details of dataverse dataset(s) to which results will be posted. If you do not permissions for a dataverse dataset to write to, use `dv_ls <- NULL`.
 
@@ -208,49 +199,50 @@ if(!is.null(dv_ls)){
 # Render Scientific Summary
 
 ```{r echo = TRUE }
-# if(!use_fake_data_1L_lgl){
-#   var_nm_change_lup <- tibble::tibble(old_nms_chr = c("PHQ9","GAD7"),
-#                                       new_nms_chr = c("PHQ-9", "GAD-7"))
-# study_descs_ls <- TTU::make_study_descs_ls(health_utl_nm_1L_chr = "AQol-6D",
-#                                            time_btwn_bl_and_fup_1L_chr = "three months",
-#                                            predr_ctgs_ls = list(`psychological distress` = c("K6"),
-#                                                                 depression =  c("BADS","PHQ9"),
-#                                                                 anxiety =  c("GAD7","OASIS","SCARED")))
-# spine_of_results_ls <- TTU::make_results_ls_spine(output_data_dir_1L_chr = paths_ls$output_data_dir_1L_chr,
-#                                                   var_nm_change_lup = var_nm_change_lup,
-#                                                   study_descs_ls = study_descs_ls,
-#                                                   nbr_of_digits_1L_int = output_format_ls$manuscript_digits_1L_int)
-# cs_ts_ratios_tb = tibble::tibble(predr_nm_chr = c("K6","depression measurements", "anxiety measurements"),
-#                                  ratios_chr = c(paste0("about ",
-#                                                        round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological distress`,2)),
-#                                                 paste0(round(mean(spine_of_results_ls$mdl_coef_ratios_ls$depression),2)),
-#                                                 paste0(round(min(spine_of_results_ls$mdl_coef_ratios_ls$anxiety),2)," or over")
-#                                  ))
+if(!use_fake_data_1L_lgl){
+  # var_nm_change_lup <- tibble::tibble(old_nms_chr = c("k10","psychwell"),
+  #                                     new_nms_chr = c("K10", "Winefield wellbeing"))
+study_descs_ls <- make_study_descs_ls(health_utl_nm_1L_chr = "EQ-5D",
+                                           time_btwn_bl_and_fup_1L_chr = "three months",
+                                           predr_ctgs_ls = list(`psychological distress` = c("k10"),
+                                                                `psychological wellbeing` =  c("psychwell")))
+spine_of_results_ls <- make_results_ls_spine(output_data_dir_1L_chr = path_params_ls$paths_ls$output_data_dir_1L_chr,
+                                                  #var_nm_change_lup = var_nm_change_lup,
+                                                  study_descs_ls = study_descs_ls,
+                                                  nbr_of_digits_1L_int = output_format_ls$manuscript_digits_1L_int)
+cs_ts_ratios_tb = tibble::tibble(predr_nm_chr = c("k10","psychwell"),
+                                 ratios_chr = c(paste0("about ",
+                                                       round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological distress`,2)),
+                                                paste0(round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological wellbeing`,2))
+                                 ))
 # ctgl_vars_regrouping_ls = list('Primary Diagnosis' = list(anxdpr = list(name_1L_chr = "anxiety/depression",
 #                                                                           ctgs_chr = c("Anxiety", "Depression", "Depression and Anxiety"))),
 #                                  'Clinical Stage' = list(early = list(name_1L_chr = "early (prior to first episode of a serious mental disorder) clinical stages",
 #                                                                       ctgs_chr = c("0-1a","1b"))))
-# sig_covars_some_predrs_mdls_tb = tibble::tibble(covars_ls = list(c("No other confounding factor"),
-#                                                                                   c("sex at birth"),
-#                                                                                                      c("primary diagnosis", "clinical staging","age")),
-#                                                                  predrs_mdls_ls = list(c("PHQ-9"), c("K6"),c("anxiety and depression measurements other than PHQ-9")),
-#                                                                  sig_thresh_dbl = c(NA_real_,0.01,NA_real_),
-#                                                                  assn_strgth_chr = c(NA_character_,NA_character_,"weakly"))
-# results_ls <- TTU::make_results_ls(spine_of_results_ls,
-#                                    cs_ts_ratios_tb = cs_ts_ratios_tb,
-#                                    ctgl_vars_regrouping_ls = ctgl_vars_regrouping_ls,
-#                                    sig_covars_some_predrs_mdls_tb = sig_covars_some_predrs_mdls_tb,
-#                                    sig_thresh_covars_1L_chr = "0.005")
-# saveRDS(results_ls,paste0(paths_ls$output_data_dir_1L_chr,"/results_ls.RDS"))
-#   rmarkdown::render("AQoL_VIH/AQoL_VIH.Rmd",
-#                     output_format = NULL,
-#                     params = list(figures_in_body_lgl = F,
-#                                   output_type_1L_chr = "Word",
-#                                   results_ls = results_ls,
-#                                   tables_in_body_lgl = F),
-#                     output_file = paste0("AQoL_VIH", ".docx"),
-#                     output_dir = paths_ls$reports_dir_1L_chr)
-# }
+sig_covars_some_predrs_mdls_tb = tibble::tibble(covars_ls = list(c("No other confounding factor")
+                                                                 # ,c("sex at birth"),c("primary diagnosis", "clinical staging","age")
+                                                                 ),
+                                                                 predrs_mdls_ls = list(c("either predictor")#, c("K6"),c("anxiety and depression measurements other than PHQ-9")
+                                                                                       ),
+                                                                 sig_thresh_dbl = c(NA_real_#,0.01,NA_real_
+                                                                                    ),
+                                                                 assn_strgth_chr = c(NA_character_#,NA_character_,"weakly"
+                                                                                     ))
+results_ls <- make_results_ls(spine_of_results_ls,
+                              cs_ts_ratios_tb = cs_ts_ratios_tb,
+                              ctgl_vars_regrouping_ls = NULL,
+                              sig_covars_some_predrs_mdls_tb = sig_covars_some_predrs_mdls_tb,
+                              sig_thresh_covars_1L_chr = "0.005")
+saveRDS(results_ls,paste0(paths_ls$output_data_dir_1L_chr,"/results_ls.RDS"))
+  rmarkdown::render("AQoL_VIH/AQoL_VIH.Rmd",
+                    output_format = NULL,
+                    params = list(figures_in_body_lgl = F,
+                                  output_type_1L_chr = "Word",
+                                  results_ls = results_ls,
+                                  tables_in_body_lgl = F),
+                    output_file = paste0("AQoL_VIH", ".docx"),
+                    output_dir = path_params_ls$paths_ls$reports_dir_1L_chr)
+}
 ```
 
 # Purge dataset copies
