--- a/vignettes/_Reporting_Params.Rmd
+++ b/vignettes/_Reporting_Params.Rmd
@@ -11,7 +11,7 @@ We begin by specifying the authorship data we wish to attach to all reports that
 ```{r }
 authors_tb <- ready4show::authors_tb
 ```
-```{r authorsds, eval = knitr::is_html_output(), results='asis'}
+```{r authorsds, eval = knitr::is_html_output(), echo=F, results='asis'}
 authors_tb %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Authors table",
@@ -20,7 +20,7 @@ authors_tb %>%
 ```{r}
 institutes_tb <- ready4show::institutes_tb
 ```
-```{r institutesds, eval = knitr::is_html_output(), results='asis'}
+```{r institutesds, eval = knitr::is_html_output(), echo = F,results='asis'}
 institutes_tb %>%
   ready4show::print_table(output_type_1L_chr = "HTML",
                           caption_1L_chr = "Author institutions table",
