--- a/vignettes/TTU.Rmd
+++ b/vignettes/TTU.Rmd
@@ -21,6 +21,7 @@ This development version of the TTU package has been made available as part of t
 
 Note that, one of the key functions in TTU (`write_ts_mdls_from_alg_outp`{.R}) makes a call to the Stan program. This function requires that you have the `cmdstanr` package installed on your machine (which should occur automatically when you install TTU) and have performed the necessary configuration of that package (refer to [https://mc-stan.org/cmdstanr/](https://mc-stan.org/cmdstanr/) for details).
 
-The following vignette demonstrates some of the tools currently included in the TTU package:
+The following vignettes demonstrate the two main workflows supported by the TTU package:
 
-- [Modelling Transfer to Utility](Model_TTU.html)
+- [Exploratory analysis workflow](Model_TTU.html)
+- [Analysis, reporting and dissemination workflow](CSP_EQ5D_TTU.html)
