--- a/inst/Markdown/_Share_Mdls.Rmd
+++ b/inst/Markdown/_Share_Mdls.Rmd
@@ -6,11 +6,12 @@ output: html_document
 ---
 
 ## Share models
-Upload the shareable models created earlier to the online data repository.
+Upload a file with the ingredients for recreating the shareable versions of the models to the online data repository.
 
 ```{r message=FALSE, results='hide', warning=FALSE}
 if(!is.null(outp_smry_ls$dv_ls)){
   outp_smry_ls$shareable_mdls_tb <- outp_smry_ls %>%
-    TTU::write_shareable_mdls_to_dv(shareable_title_detail_1L_chr = params_ls$dv_mdl_desc_1L_chr)
+    TTU::write_shareable_mdls_to_dv(shareable_title_detail_1L_chr = params_ls$dv_mdl_desc_1L_chr,
+                                    share_ingredients_1L_lgl = T)
 }
 ```
