--- a/data-raw/inst/Markdown/_mdl_rpt_tmpl.Rmd
+++ b/data-raw/inst/Markdown/_mdl_rpt_tmpl.Rmd
@@ -9,7 +9,8 @@ output: html_document
 
 ```{r echo=F, results="asis"}
 make_mdl_desc_lines(outp_smry_ls = params_ls$outp_smry_ls,
-                    mdl_nm_1L_chr = {{mdl_nms_chr}}) %>% writeLines()
+                    mdl_nm_1L_chr = {{mdl_nms_chr}},
+                    output_type_1L_chr = {{output_type_1L_chr}}) %>% writeLines()
 ```
 
 ```{r echo = F, results="asis"}
