--- a/data-raw/inst/Markdown/Report.Rmd
+++ b/data-raw/inst/Markdown/Report.Rmd
@@ -50,16 +50,20 @@ params:
   append_params_ls: !r NULL
   eval_1L_lgl: !r FALSE
   ds_tb: !r NULL
+  dv_mdl_desc_1L_chr: !r NA_character_ #
   header_yaml_args_ls: !r NULL
+  inc_fl_types_chr: ".pdf" #
   output_type_1L_chr: "PDF"
   nbr_of_digits_1L_int: !r 2L
   path_from_top_level_1L_chr: !r NULL
   path_to_data_from_top_level_chr: !r NULL
+  purge_data_1L_lgl: FALSE #
   rprt_lup: !r NULL
   rprt_nm_1L_chr: !r NA_character_
   rprt_output_type_1L_chr: "PDF"
   rprt_subtitle_1L_chr: !r NA_character_
   rprt_type_1L_chr: "Report"
+  share_mdls_1L_lgl: TRUE #
   subtitle_1L_chr: !r NA_character_
   use_fake_data_1L_lgl: FALSE
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
@@ -73,6 +77,16 @@ subtitle: "`r params$subtitle_1L_chr`"
 ```{r, child=c('_Get_Outp_Smry.Rmd')}
 ```
 
-# Create report
+# Create shareable assets
+```{r echo=FALSE}
+if(params_ls$share_mdls_1L_lgl){
+  child_chr <- c('_Write_Shareable_Data.Rmd')
+}else{
+  child_chr <- NULL
+}
+```
+```{r, child = child_chr[1]}
+```
 ```{r, child=c('_Write_Report.Rmd')}
 ```
+
