--- a/inst/Markdown/Report.Rmd
+++ b/inst/Markdown/Report.Rmd
@@ -65,6 +65,7 @@ params:
   rprt_type_1L_chr: "Report"
   share_mdls_1L_lgl: TRUE #
   subtitle_1L_chr: !r NA_character_
+  transform_paths_ls: !r NULL
   use_fake_data_1L_lgl: FALSE
 date: "`r format.Date(Sys.Date(),'%B %d, %Y')`"
 subtitle: "`r params$subtitle_1L_chr`"
